--- a/client/src/views/stylesheets/NavigationBarTop.scss
+++ b/client/src/views/stylesheets/NavigationBarTop.scss
@@ -62,6 +62,7 @@
 
 .login-btn, .logout-btn {
   min-width: 9vw;
+  max-width: 10vw;  
   max-height: 5vh;
   min-height: 3rem;
   margin-right: 1rem;
@@ -70,7 +71,7 @@
   padding: 0.5rem;
   font-family: 'Indie Flower', cursive;
   border-radius: 8px;
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 
 .login-btn {
