--- a/client/src/views/mobilestylesheets/MobileHomePage.scss
+++ b/client/src/views/mobilestylesheets/MobileHomePage.scss
@@ -10,9 +10,14 @@
 .tagline {
   text-align: center;
   margin-top: 1rem;
-  font-size: 1rem;
+  font-weight: 700;
   color: #333;
   line-height: 1.4;
+  background-color: #FFF;
+  padding: 1rem;
+  border-radius: 25px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  
 } 
 
   .dog_container {
