--- a/client/src/views/mobilestylesheets/MobileSignUp.scss
+++ b/client/src/views/mobilestylesheets/MobileSignUp.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-weight: 600;
   padding: 2rem;
   margin-top: 60px;
   margin-top: 60px;
@@ -62,6 +63,64 @@
       background-color: #FFF; 
       border-radius: 100px;
       animation: glow 1s ease-in-out infinite alternate;
+      animation: pulse 3.5s infinite;
+    transition: transform 0.1s linear;
+    &:hover {
+      animation: pulseRumbleHover 1s infinite;
+    }
+
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 1); 
+      }
+
+      100% {
+        box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+      }
+    }
+  
+    @keyframes pulseRumble {
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+        transform: none;
+      }
+
+      10%, 90% {
+        transform: translateX(-1px);
+      }
+
+      20%, 80% {
+        transform: translateX(2px);
+      }
+
+      30%, 50%, 70% {
+        transform: translateX(-4px);
+      }
+
+      40%, 60% {
+        transform: translateX(4px);
+      }
+
+      100% {
+        box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+      }
+    }
+  
+    @keyframes pulseRumbleHover {
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+        transform: none;
+      }
+
+      50% {
+        transform: translateY(-2px);
+      }
+
+      100% {
+        box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+        transform: translateY(2px);
+      }
+    }
       @keyframes glow {
         from {
           box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white; 
