--- a/client/src/views/mobilestylesheets/MobileSignUp.scss
+++ b/client/src/views/mobilestylesheets/MobileSignUp.scss
@@ -7,7 +7,7 @@
   font-weight: 600;
   padding: 2rem;
   margin-top: 60px;
-  margin-top: 60px;
+  margin-bottom: 60px;
 
   h1 {
     font-size: 2rem;
