--- a/client/src/views/mobilestylesheets/MobileAboutUs.scss
+++ b/client/src/views/mobilestylesheets/MobileAboutUs.scss
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 4em;
+  margin-top: 60px;
+  margin-bottom: 60px;
 
   .aboutus-header-ctn {
     display: flex;
