Update image-grid css attribute and fetch for mobile public feed

--- a/client/src/views/mobilestylesheets/MobilePublicFeed.scss
+++ b/client/src/views/mobilestylesheets/MobilePublicFeed.scss
@@ -17,7 +17,7 @@
     margin-bottom: 1rem;
   }
 
-  .image-grid {
+  .mobile-public-image-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
