Update dog card breed modal scss

--- a/client/src/views/stylesheets/DogBreedCardModal.scss
+++ b/client/src/views/stylesheets/DogBreedCardModal.scss
@@ -53,10 +53,7 @@
     width: 95%;
     max-width: 350px;
     padding: 1.5rem;
-  }
-
-  .modal-card-icons {
-    width: 35px; 
+    scale: (0.8);
   }
 }
 
