--- a/client/src/views/stylesheets/DogBreedCardModal.scss
+++ b/client/src/views/stylesheets/DogBreedCardModal.scss
@@ -33,7 +33,7 @@
   }
 
   .modal-card-icons {
-    width: 1.75vw;
+    width: 2rem;
     margin: 1rem; 
     cursor: pointer;
   }
@@ -53,7 +53,7 @@
     width: 95%;
     max-width: 350px;
     padding: 1.5rem;
-    scale: (0.8);
+    transform: translate(-50%, -50%) scale(0.8); 
   }
 }
 
