--- a/client/src/views/stylesheets/DogBreedCardModal.scss
+++ b/client/src/views/stylesheets/DogBreedCardModal.scss
@@ -53,11 +53,12 @@
   .dog-breed-card {
     width: 95%;
     max-width: 350px;
-    padding: 1rem;
+    padding: 0.75rem;
   } 
 
   .modal-card-icons {
     width: 0.5rem;
+    margin: 0.5rem;
   }
 }
 
