--- a/client/src/views/stylesheets/Card.scss
+++ b/client/src/views/stylesheets/Card.scss
@@ -244,10 +244,13 @@ ul, li {
 
   &::-webkit-scrollbar {
     background: rgba(0, 0, 0, 0.1);
+    width: 12px;
   }
 
   &::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    border: 3px solid rgba(255, 255, 255, 0.3);
   }
 }
 
@@ -263,10 +266,4 @@ ul, li {
   height: 1rem;
   width: 20rem;
   margin-bottom: 1.15rem;
-}
-
-@media (max-width: 768px) {
-  .dog-breed-card {
-    transform: scale(1.1);
-  }
 }
