--- a/client/src/views/stylesheets/MostPopularGeneratedImagePage.scss
+++ b/client/src/views/stylesheets/MostPopularGeneratedImagePage.scss
@@ -37,31 +37,15 @@
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
   }
-  @media (max-height: 950px) {
-    & {
-      margin-bottom: -6rem;
-      padding-bottom: 5rem;
-    }
-  }
-  
-  @media (max-height: 600px) {
-    & {
-    }
-  }
-  
-  @media (max-height: 400px) {
-    & {
-    }
-  }
 
-} 
+  @media (max-width: 768px)  {
+    .image-grid {
+      grid-template-columns: repeat(2, 1fr);;
+    }
 
-@media(max-height:800px) {
-  .page-body {
-    height: 75vh;
-  }
-
-  .image-grid {
-    padding-bottom: -10rem;
+    .page-body {
+      margin-top: 60px;
+      margin-bottom: 60px;
+    }
   }
 }
