--- a/client/src/views/stylesheets/MostPopularGeneratedImagePage.scss
+++ b/client/src/views/stylesheets/MostPopularGeneratedImagePage.scss
@@ -40,11 +40,12 @@
 
   @media (max-width: 768px)  {
     .image-grid {
-      grid-template-columns: repeat(2, 0.5fr);;
+      grid-template-columns: repeat(2, 0.5fr);
+      gap: 1rem;
     }
 
     .most-popular-generated-images-page-container{
-      margin-top: 60px;
+      margin-top: 120px;
       margin-bottom: 60px;
     }
   }
