--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -2,6 +2,10 @@
   padding: 1rem;
   text-align: center;
 
+  .mobile-breed-title {
+    font-size: 1.5rem;
+  }
+
   .mobile-clickable-title {
     font-size: 1.2rem;
     margin-bottom: 1rem;
@@ -11,12 +15,13 @@
 
   .mobile-image-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);  // 2 images per row for mobile
+    grid-template-columns: repeat(2, 1fr); 
     gap: 1rem;
     margin-bottom: 1rem;
 
     img {
       width: 100%;
+      height: 2rem;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
       cursor: pointer;
