--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -1,16 +1,16 @@
 .mobile-news-feed-user-container {
   padding: 1rem;
   text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
 
   .mobile-breed-title {
-    font-size: 1.5rem;
+    font-size: 0.75rem;
   }
 
   .mobile-clickable-title {
     font-size: 1.2rem;
     margin-bottom: 1rem;
-    cursor: pointer;
-    color: #333;
   }
 
   .mobile-image-grid {
@@ -20,11 +20,9 @@
     margin-bottom: 1rem;
 
     img {
-      width: 100%;
       height: 2rem;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
       transition: transform 0.3s ease;
 
       &:hover {
@@ -41,7 +39,7 @@
       margin-bottom: 1rem;
     }
 
-    .generate-button {
+    .mobile-generate-button {
       width: 4rem;
       cursor: pointer;
       margin: 1rem auto;
