--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -5,7 +5,7 @@
   margin-bottom: 60px;
 
   .mobile-breed-title {
-    font-size: 0.75rem;
+    font-size: 0.5rem;
   }
 
   .mobile-clickable-title {
@@ -20,7 +20,6 @@
     margin-bottom: 1rem;
 
     img {
-      height: 2rem;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
@@ -42,7 +41,15 @@
     .mobile-generate-button {
       width: 4rem;
       cursor: pointer;
-      margin: 1rem auto;
+      margin: 1rem auto; 
+      @keyframes glow {
+        from {
+          box-shadow: 0 0 10px white, 0 0 20px white, 0 0 20px white; /* Initial glow effect */
+        }
+        to {
+          box-shadow: 0 0 20px white, 0 0 20px white, 0 0 60px white; /* Final glow effect */
+        }
+      }
     }
   }
 }
