--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -13,10 +13,12 @@
     margin-bottom: 1rem;
   }
 
-  .mobile-image-grid {
+  .mobile-userfeed-image-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
-    gap: 1rem;
+    gap: 0.5rem;
+    justify-content: center; 
+    align-items: center; 
     margin-bottom: 1rem;
 
     img {
