Update placeholder image scss

--- a/client/src/views/stylesheets/PlaceHolderImage.scss
+++ b/client/src/views/stylesheets/PlaceHolderImage.scss
@@ -23,5 +23,10 @@
 @media (max-width: 768px){
   .placeholder-container{
     width: 8rem;
+    height: auto;
+  }
+
+  .placeholder-container img {
+    transform: scale(0.5); 
   }
 }
