--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -22,7 +22,7 @@
     margin-bottom: 1rem;
 
     img {
-      width: 8rem;
+      width: 6rem;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
@@ -45,6 +45,7 @@
       width: 4rem;
       cursor: pointer;
       margin: 1rem auto; 
+      border-radius: 100px;
       animation: glow 1s ease-in-out infinite alternate;
     }
     @keyframes glow {
