--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -22,7 +22,8 @@
     margin-bottom: 1rem;
 
     img {
-      width: 6rem;
+      height: 4rem;
+      width: auto;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
