--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -15,11 +15,9 @@
 
   .mobile-userfeed-image-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 0.5rem;
-    justify-content: center; 
-    align-items: center; 
-    margin-bottom: 1rem;
+    grid-template-columns: repeat(2, 0.5fr); 
+    gap: 0.25rem;
+    margin: 0 1rem 1rem 1rem;
 
     img {
       width: 8rem;
