--- a/client/src/views/mobilestylesheets/MobileUserFeed.scss
+++ b/client/src/views/mobilestylesheets/MobileUserFeed.scss
@@ -15,8 +15,11 @@
 
   .mobile-userfeed-image-grid {
     display: grid;
-    grid-template-columns: repeat(2, 0.5fr); 
-    margin: 0 1rem 1rem 1rem;
+    grid-template-columns: repeat(2, 1fr); 
+    justify-content: center; 
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
 
     img {
       width: 8rem;
