Update Mobile User Feed

--- a/client/src/views/stylesheets/PlaceHolderImage.scss
+++ b/client/src/views/stylesheets/PlaceHolderImage.scss
@@ -23,10 +23,11 @@
 @media (max-width: 768px){
   .placeholder-container{
     width: 8rem;
-    height: auto;
+    height: 4rem;
   }
 
   .placeholder-container img {
     transform: scale(0.5); 
+    box-shadow: none;
   }
 }
