Update Mobile User Feed

--- a/client/src/views/stylesheets/PlaceHolderImage.scss
+++ b/client/src/views/stylesheets/PlaceHolderImage.scss
@@ -23,11 +23,12 @@
 @media (max-width: 768px){
   .placeholder-container{
     width: 8rem;
-    height: 4rem;
+    height: 6rem;
   }
 
   .placeholder-container img {
     transform: scale(0.5); 
     box-shadow: none;
+    border: none;
   }
 }
