Update placeholdder image scss

--- a/client/src/views/stylesheets/PlaceHolderImage.scss
+++ b/client/src/views/stylesheets/PlaceHolderImage.scss
@@ -23,11 +23,11 @@
 @media (max-width: 768px){
   .placeholder-container{
     width: 128px;
-    height: 81.92;
+    height: 81.92px;
   }
 
   .placeholder-container img {
     width: 128px;
-    height: 81.92;
+    height: 81.92px;
   }
 }
