--- a/client/src/views/stylesheets/DogBreedCardModal.scss
+++ b/client/src/views/stylesheets/DogBreedCardModal.scss
@@ -40,11 +40,11 @@
 
   @keyframes glow {
     from {
-      box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white; /* Initial glow effect */
+      box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white; 
     }
 
     to {
-      box-shadow: 0 0 20px white, 0 0 40px white, 0 0 60px white; /* Final glow effect */
+      box-shadow: 0 0 20px white, 0 0 40px white, 0 0 60px white; 
     }
   }
 } 
