--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -31,6 +31,8 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 2rem;
+    font-weight: 700;
+    font-size: 1.5rem;
 
     select {
       width: 10rem;
@@ -47,7 +49,7 @@
       align-items: center;
 
       img {
-        width: 8rem;
+        width: 12rem;
         height: auto;
         border-radius: 10px;
       } 
