--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -23,8 +23,65 @@
       width: 4rem;
       height: 4rem;
       cursor: pointer;
+      animation: pulse 3.5s infinite;
+      transition: transform 0.1s linear;
+      &:hover {
+        animation: pulseRumbleHover 1s infinite;
+      }
+
+      @keyframes pulse {
+        0% {
+          box-shadow: 0 0 0 0 rgba(255, 255, 255, 1); 
+        }
+
+        100% {
+          box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+        }
+      }
+    
+      @keyframes pulseRumble {
+        0% {
+          box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+          transform: none;
+        }
+
+        10%, 90% {
+          transform: translateX(-1px);
+        }
+
+        20%, 80% {
+          transform: translateX(2px);
+        }
+
+        30%, 50%, 70% {
+          transform: translateX(-4px);
+        }
+
+        40%, 60% {
+          transform: translateX(4px);
+        }
+
+        100% {
+          box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+        }
+      }
+    
+      @keyframes pulseRumbleHover {
+        0% {
+          box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+          transform: none;
+        }
+
+        50% {
+          transform: translateY(-2px);
+        }
+
+        100% {
+          box-shadow: 0px 0px 20px 16px rgba(255, 255, 255, 1);
+          transform: translateY(2px);
+        }
+      }
     }
-  }
 
   .dog-selection-container {
     display: flex;
