Update icon dimensions for generate page and wait modal on mobile

--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -108,8 +108,9 @@
 
       img {
         width: 12rem;
-        height: auto;
+        height: 7.68rem;
         border-radius: 10px;
+        background-color: #aa8ec8;
       } 
 
       .first-dog-portrait {
