Change background on placeholder image on mobile genreate page

--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -110,7 +110,7 @@
         width: 12rem;
         height: 7.68rem;
         border-radius: 10px;
-        background-color: #aa8ec8;
+        background-color: #c75189;
       } 
 
       .first-dog-portrait {
