Clean up commeted out code and change background of pleholder image for mobile gnereate page.

--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -110,7 +110,7 @@
         width: 12rem;
         height: 7.68rem;
         border-radius: 10px;
-        background-color: #c75189;
+        background-color: #d2bdbd;
       } 
 
       .first-dog-portrait {
