Change background on placeholder image on mobile generate page

--- a/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
+++ b/client/src/views/mobilestylesheets/MobileGenerateMixedBreedPage.scss
@@ -110,7 +110,7 @@
         width: 12rem;
         height: 7.68rem;
         border-radius: 10px;
-        background-color: #d2bdbd;
+        background-color: #FFBEBA;
       } 
 
       .first-dog-portrait {
