--- a/client/src/views/stylesheets/SignInModal.scss
+++ b/client/src/views/stylesheets/SignInModal.scss
@@ -1,5 +1,3 @@
-// SignInModal.scss
-
 .signin-modal-overlay {
   position: fixed;
   top: 0;
@@ -14,7 +12,7 @@
 
   @media (max-height: 800px) {
     & {
-      transform: scale(0.8); // Scales down the container to 80% of its original size
+      transform: scale(0.8);
       margin-bottom: -5rem;
       margin-top: -1.5rem;
     }
@@ -22,13 +20,13 @@
   
   @media (max-height: 600px) {
     & {
-      transform: scale(0.5); // Scales down the container to 50% of its original size
+      transform: scale(0.5); 
     }
   }
   
   @media (max-height: 400px) {
     & {
-      transform: scale(0.3); // Scales down the container to 30% of its original size
+      transform: scale(0.3);
     }
   }
 }
@@ -102,6 +100,12 @@
       &:hover {
         filter: brightness(1.5);
     }
+    }
+    
+    .signin-btn-ctn{  
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
     }
   }
 }
