--- a/client/src/views/stylesheets/Card.scss
+++ b/client/src/views/stylesheets/Card.scss
@@ -1,4 +1,3 @@
-
 // Variables for colors used in gradients
 $type-color-1: #7B9AE1;
 $type-color-2: #5E74A1;
@@ -39,28 +38,6 @@ $type-color-8: #EDCF8E;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  @media (max-height: 800px) {
-    & {
-      transform: scale(0.7); // Scales down the container to 80% of its original size
-      // margin-bottom: -3rem;
-      // margin-top: -1.5rem;
-      margin: -4rem -3rem -5rem;
-    }
-  }
-  
-  @media (max-height: 600px) {
-    & {
-      transform: scale(0.5); // Scales down the container to 50% of its original size
-    }
-  }
-  
-  @media (max-height: 400px) {
-    & {
-      transform: scale(0.3); // Scales down the container to 30% of its original size
-    }
-  }
-
 } 
 
 .nameheaders {
@@ -216,11 +193,19 @@ $type-color-8: #EDCF8E;
 .shimmer-wrapper {
   position: relative;
   display: inline-block;
-  width: auto;
-  height: auto;
   border: 5px $type-color-8 outset;
   box-shadow: 3px 3px 10px #000;
   margin: 0 0 0.25rem;
+
+  &.has-image {
+    width: auto;
+    height: auto;
+  }
+
+  &.no-image {
+    width: 21.5rem;
+    height: 100rem;
+  }
 
   .holo-shimmer {
     position: absolute;
